# Arya

./: .gitignore  LICENSE  Makefile  README.md  biome.json  brand.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-arya-api.yml  release-macos.yml  security-audit.yml  verify.yml
.memory/: 2026-07-03-arya-v1-loop.md
arya-api/: .env.example  Cargo.toml  Dockerfile
arya-api/src/: auth.rs  billing.rs  catalog.rs  config.rs  lib.rs  main.rs  metering.rs  proxy.rs  ratelimit.rs
arya-api/tests/: proxy_e2e.rs
docs/: design-brief.md  ideas-inbox.md  release.md  remediation-plan.md  security-audit.md  spec-dictation-translation.md  spec-note-attachments.md  user-guide.md
docs/darkfactory/: PLAN.md  PRD.md  PROGRESS.md  REPORT.md
scripts/: create-signing-cert.sh  package-dmg.sh  scan-keys.mjs  sync-brand.mjs
sidecar/: package.json  tsconfig.json
sidecar/src/: approvals.ts  images.ts  index.ts  mcp.ts  paths.ts  protocol.ts  providers.ts  session.ts  tools.ts
sidecar/test/: unit.test.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.rc.conf.json
src-tauri/capabilities/: default.json  hud.json  main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_notes.sql  0002_dictation.sql  0003_recording_notes.sql  0004_speakers_calendar.sql  0005_agent.sql  0006_mcp_routines.sql  0007_rag.sql  0008_note_attachments.sql  0009_dictation_translation.sql  0010_links.sql  0011_note_documents.sql  0012_note_nesting.sql  0013_dictation_translations.sql  0014_mindmaps.sql  0015_kb.sql
src-tauri/native/system-audio-helper/: main.swift
src-tauri/src/: attachments.rs  braindump.rs  calendar.rs  classify.rs  cloud.rs  db.rs  dev_hooks.rs  galaxy.rs  http.rs  keys.rs  lib.rs  links.rs  main.rs  meeting_detect.rs  mindmaps.rs  notes.rs  notion_import.rs  paste.rs  search.rs  transform.rs  translate.rs  tray.rs  vecmath.rs
src-tauri/src/account/: commands.rs  mod.rs  signin_flow.rs  tokens.rs
src-tauri/src/agent/: commands.rs  ecosystem.rs  mod.rs  sidecar.rs
src-tauri/src/audio/: mod.rs  resample.rs  system_capture.rs  turns.rs  wav_file.rs
src-tauri/src/cleanup/: mechanical.rs  mod.rs  ollama.rs
src-tauri/src/dictation/: capture_worker.rs  commands.rs  hotkey.rs  keytap.rs  mod.rs  panel.rs  profiles.rs  service.rs  settings.rs
src-tauri/src/kb/: chat.rs  commands.rs  extract.rs  ingest.rs  mod.rs  ocr.rs  retrieve.rs
src-tauri/src/rag/: commands.rs  embed.rs  mod.rs
src-tauri/src/recording/: commands.rs  diarize.rs  enroll.rs  generate.rs  mod.rs  processing.rs  recorder.rs  recovery.rs  settings.rs
src-tauri/src/speech/: commands.rs  engine_cache.rs  mod.rs  models.rs  streaming.rs  wav.rs  wer.rs  whisper.rs
src-tauri/tests/: diarize_probe.rs  speech_bench.rs  streaming_bench.rs
src/account/: AccountGate.tsx  AccountPanel.tsx  ModelSettings.tsx
src/agent/: AgentPanel.tsx  AgentSection.tsx  McpPanel.tsx  MessageView.tsx  RoutinesPanel.tsx  SecurityPanel.tsx
src/dictation/: DictationPanel.tsx  RecentDictations.tsx
src/galaxy/: GalaxyPanel.tsx  galaxy.css
src/hud/: HudApp.tsx  hud.css
src/knowledge/: KbChat.tsx  KbDocuments.tsx  KnowledgeBasePanel.tsx
src/lib/: account.ts  agent.ts  autostart.ts  dictation.ts  dictationInsert.ts  ecosystem.ts  galaxy.ts  kb.ts  languages.ts  links.ts  mindmap.ts  models.ts  notes.ts  theme.ts  transform.ts
src/mindmap/: MindMapPanel.tsx  mindmap.css
src/notes/: BacklinksPanel.tsx  BlockEditor.tsx  BrainDumpDialog.tsx  NoteBanners.tsx  NotesWorkspace.tsx  blockDocument.ts  mentionSchema.tsx  notes-chrome.css
src/onboarding/: Onboarding.tsx
(+23 files in other folders)
