[package]
name = "arya"
version = "0.1.0"
description = "Arya desktop shell"
license = "MIT"
edition = "2021"

[lib]
name = "arya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "macros",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[profile.release]
strip = true
lto = "thin"
