[package]
name = "arya"
version = "0.1.0"
description = "Arya desktop shell"
license = "MIT"
edition = "2021"

[lib]
name = "arya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "macros",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
whisper-rs = { version = "0.16", features = ["metal"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
hound = "3.5"
cpal = "0.18"
rubato = "0.16"
tauri-plugin-global-shortcut = "2"
libc = "0.2"
sherpa-rs = { version = "0.6", default-features = false, features = ["download-binaries", "sys"] }
base64 = "0.22"
keyring = { version = "3", features = ["apple-native"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
percent-encoding = "2"
parking_lot = "0.12"
pdf-extract = "0.12.0"
calamine = "0.36.0"
csv = "1.4.0"
zip = "8.6.0"
quick-xml = "0.41.0"
ocrs = "0.12.2"
image = "0.25.10"
rten = "0.24"
lopdf = { version = "0.42", features = ["embed_image"] }

[profile.release]
strip = true
lto = "thin"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
core-foundation = "0.10"
core-graphics = "0.25"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication", "NSApplication", "NSResponder", "NSWindow", "NSPanel", "NSView"] }
objc2-event-kit = { version = "0.3", features = ["EKEventStore", "EKEvent", "EKParticipant", "EKCalendarItem"] }
objc2-foundation = "0.3"
